# md-lab

./: .gitignore  README.md  SETUP.md  env.sh  labctl.py  mdout.mdp  pyproject.toml  requirements.txt
labkit/: __init__.py  backfill.py  config.py  doctor.py  engine.py  gmx.py  gro.py  mdp.py  recipes.py  runbase.py  runjob.py  scheduler.py  structures.py  uncertainty.py  xvg.py
labkit/agent/: chat.py  intent.py  tools.py  translate.py
labkit/data/: build_ontology.py  ontology.json  ontology_source.json  rules.json
labkit/evals/: agent_bench.py  benchmarks.json  hw_bench.py  metrics.py  ood_bench.py  runner.py  translate_bench.py
labkit/ligand/: __init__.py  param.py
labkit/plan/: __init__.py  build.py  cost.py  defaults.py  expr.py  jsonschema.py  mdp_emit.py  ontology.py  resolve.py  schema.py  validate.py
labkit/tracks/: __init__.py  cell.py  ligand_md.py  openmm_md.py  qmmm.py  reaction.py
scripts/: fetch_assets.sh
simulations/: agent_bench.json  eval_results.json  hw_bench.json  translate_bench.json
simulations/_ligands/: CC_C_Cc1ccc_cc1_C_C_C_O_O_openff_2_2_0_offxml_w700.json  CC_O_Oc1ccccc1C_O_O_openff_2_2_0_offxml_w800.json
simulations/_pdb_headers/: 1A4M.txt  1AKI.txt  1EMA.txt  1GFL.txt  1GFP.txt  1HHP.txt  1HIV.txt  1HVR.txt  1K32.txt  1OK0.txt  1P7A.txt  1TEN.txt  1TND.txt  (+7 more)
tests/: test_audit_regressions.py  test_no_hardcoding.py  test_plan.py
uicheck/: README.md  hopt.js  package-lock.json  package.json  parse_test.js  parse_test2.js  parse_test3.js  plan_ui.js  prot_surface.js  shot.js  submit_test.js  sweep.js
viewer/: app.py
(+31 files in other folders)
